--- a/graft/package.json
+++ b/graft/package.json
@@ -20,9 +20,11 @@
     "graphql": "^0.13.1",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^2.21.0",
+    "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
     "mysql2": "^1.5.2",
     "nodemon": "^1.17.1",
+    "npm": "^5.7.1",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.35.1",
