--- a/starter/package.json
+++ b/starter/package.json
@@ -32,6 +32,7 @@
     "@swimlane/ngx-datatable": "11.1.7",
     "angular-calendar": "0.23.2",
     "angular-tree-component": "7.0.1",
+    "angular2-jwt": "^0.2.3",
     "apollo-angular": "^1.0.1",
     "apollo-angular-link-http": "^1.0.2-beta.0",
     "apollo-cache-inmemory": "^1.1.9",
