--- a/graft/package.json
+++ b/graft/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js --exec babel-node --presets es2015,stage-2",
+    "start": "nodemon --exec babel-node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -22,7 +22,9 @@
     "graphql-tools": "^2.21.0",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
+    "merge-graphql-schemas": "^1.5.1",
     "mysql2": "^1.5.2",
+    "nodemailer": "^4.6.3",
     "nodemon": "^1.17.1",
     "npm": "^5.7.1",
     "pg": "^7.4.1",
@@ -33,7 +35,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.10.0"
   }
 }
