--- a/starter/package.json
+++ b/starter/package.json
@@ -49,6 +49,7 @@
     "intl": "1.2.5",
     "leaflet": "1.3.0",
     "moment": "2.20.1",
+    "ng-pick-datetime": "^5.2.4",
     "ng2-charts": "1.6.0",
     "ng2-dragula": "1.5.0",
     "ng2-file-upload": "1.3.0",
