--- a/starter/package.json
+++ b/starter/package.json
@@ -38,6 +38,7 @@
     "apollo-cache-inmemory": "^1.1.9",
     "apollo-client": "^2.2.5",
     "apollo-link": "^1.2.1",
+    "apollo-link-context": "^1.0.8",
     "apollo-link-ws": "^1.0.7",
     "chart.js": "2.7.1",
     "core-js": "2.5.3",
