--- a/starter/package.json
+++ b/starter/package.json
@@ -29,6 +29,7 @@
     "@ngx-loading-bar/router": "^1.1.0",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
+    "@swimlane/ngx-charts": "^7.3.0",
     "@swimlane/ngx-datatable": "11.1.7",
     "angular-calendar": "0.23.2",
     "angular-tree-component": "7.0.1",
