--- a/graft/package.json
+++ b/graft/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "formidable": "^1.2.1",
     "graphql": "^0.13.1",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^2.21.0",
