--- a/starter/Dockerfile
+++ b/starter/Dockerfile
@@ -5,7 +5,7 @@ COPY package.json /app/
 RUN npm install
 COPY ./ /app/
 ARG env=prod
-RUN npm run build -- --prod --environment $env
+RUN npm run build -- --prod --aot --environment $env
 
 # Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
 FROM nginx:1.13
