--- a/graft/package.json
+++ b/graft/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/server.js",
-    "dev": "nodemon server.js"
+    "start": "nodemon --exec babel-node src/index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
