--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,76 +12,76 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "5.2.0",
-    "@angular/cdk": "5.1.0",
-    "@angular/common": "5.2.0",
-    "@angular/compiler": "5.2.0",
-    "@angular/core": "5.2.0",
-    "@angular/flex-layout": "2.0.0-beta.10-4905443",
-    "@angular/forms": "5.2.0",
-    "@angular/http": "5.2.0",
-    "@angular/material": "5.1.0",
-    "@angular/platform-browser": "5.2.0",
-    "@angular/platform-browser-dynamic": "5.2.0",
-    "@angular/router": "5.2.0",
-    "@asymmetrik/ngx-leaflet": "3.0.1",
-    "@ngx-loading-bar/router": "^1.1.0",
-    "@ngx-translate/core": "9.1.1",
-    "@ngx-translate/http-loader": "2.0.1",
-    "@swimlane/ngx-charts": "^7.3.0",
-    "@swimlane/ngx-datatable": "11.1.7",
-    "angular-calendar": "0.23.2",
-    "angular-tree-component": "7.0.1",
+    "@agm/core": "1.0.0-beta.3",
+    "@angular/animations": "6.0.4",
+    "@angular/cdk": "6.2.1",
+    "@angular/common": "6.0.4",
+    "@angular/compiler": "6.0.4",
+    "@angular/core": "6.0.4",
+    "@angular/flex-layout": "5.0.0-beta.14",
+    "@angular/forms": "6.0.4",
+    "@angular/http": "6.0.4",
+    "@angular/material": "6.2.1",
+    "@angular/platform-browser": "6.0.4",
+    "@angular/platform-browser-dynamic": "6.0.4",
+    "@angular/router": "6.0.4",
+    "@asymmetrik/ngx-leaflet": "3.0.2",
+    "@ngx-loading-bar/router": "^2.1.0",
+    "@ngx-translate/core": "10.0.2",
+    "@ngx-translate/http-loader": "3.0.1",
+    "@swimlane/ngx-charts": "^8.0.2",
+    "@swimlane/ngx-datatable": "13.0.1",
+    "angular-calendar": "0.25.2",
+    "angular-tree-component": "7.2.0",
     "angular2-jwt": "^0.2.3",
-    "apollo-angular": "^1.0.1",
-    "apollo-angular-link-http": "^1.0.2-beta.0",
-    "apollo-cache-inmemory": "^1.1.9",
-    "apollo-client": "^2.2.5",
-    "apollo-link": "^1.2.1",
+    "apollo-angular": "^1.1.0",
+    "apollo-angular-link-http": "^1.1.0",
+    "apollo-cache-inmemory": "^1.2.2",
+    "apollo-client": "^2.3.2",
+    "apollo-link": "^1.2.2",
     "apollo-link-context": "^1.0.8",
-    "apollo-link-ws": "^1.0.7",
-    "chart.js": "2.7.1",
-    "core-js": "2.5.3",
-    "d3": "4.12.2",
+    "apollo-link-ws": "^1.0.8",
+    "chart.js": "2.7.2",
+    "core-js": "2.5.7",
+    "d3": "5.4.0",
     "dragula": "3.7.2",
-    "graphql": "^0.13.1",
-    "graphql-tag": "^2.8.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "hammerjs": "2.0.8",
     "intl": "1.2.5",
-    "leaflet": "1.3.0",
-    "moment": "2.20.1",
-    "ng-pick-datetime": "^5.2.4",
+    "leaflet": "1.3.1",
+    "moment": "2.22.2",
+    "ng-pick-datetime": "^6.0.4",
     "ng2-charts": "1.6.0",
     "ng2-dragula": "1.5.0",
     "ng2-file-upload": "1.3.0",
     "ng2-validation": "4.2.0",
-    "ngx-perfect-scrollbar": "5.3.1",
-    "ngx-quill": "2.0.4",
-    "rxjs": "5.5.6",
+    "ngx-perfect-scrollbar": "6.2.0",
+    "ngx-quill": "3.1.0",
+    "rxjs": "6.2.0",
     "screenfull": "3.3.2",
-    "subscriptions-transport-ws": "^0.9.6",
-    "zone.js": "0.8.20"
+    "subscriptions-transport-ws": "^0.9.9",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.5",
-    "@angular/compiler-cli": "5.2.0",
-    "@angular/language-service": "5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.4",
+    "@angular/language-service": "6.0.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~10.3.1",
+    "codelyzer": "^4.3.0",
+    "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^1.1.0",
+    "protractor": "~5.3.2",
+    "ts-node": "~6.1.0",
+    "tslint": "~5.10.0",
+    "typescript": "~2.9.1"
   }
 }
