--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,28 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/index.js",
-    "dev": "nodemon index.js"
+    "build": "babel src -d dist",
+    "serve": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.3.2",
-    "bcrypt": "^1.0.3",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "formidable": "^1.2.1",
     "graphql": "^0.13.1",
     "graphql-subscriptions": "^0.5.8",
-    "graphql-tools": "^2.21.0",
+    "graphql-tools": "^3.0.2",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
     "merge-graphql-schemas": "^1.5.1",
     "mysql2": "^1.5.2",
     "nodemailer": "^4.6.3",
     "nodemon": "^1.17.1",
-    "npm": "^5.7.1",
+    "npm": "^6.1.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.35.1",
