--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.3.2",
+    "babel-runtime": "^6.26.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
