--- a/starter/Dockerfile
+++ b/starter/Dockerfile
@@ -1,16 +1,5 @@
-# Stage 0, based on Node.js, to build and compile Angular
-FROM node:8.6 as node
-WORKDIR /app
-COPY package.json /app/
-RUN npm install
-COPY ./ /app/
-ARG env=prod
-RUN npm run build -- --prod  --no-aot  --environment $env
-
-
 FROM  nginx
-COPY --from=node /app/dist/ /usr/share/nginx/html
-#RUN  rm /etc/nginx/site-available/default
-COPY ./nginx-custom.conf /etc/nginx/site-available/default
+COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
+COPY dist /usr/share/nginx/html
 EXPOSE 80 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx-debug", "-g", "daemon off;"]
